tests/baselines/reference/primitiveTypeAssignment.errors.txt
primitiveTypeAssignment.ts(1,9): error TS2693: 'any' only refers to a type, but is being used as a value here.
primitiveTypeAssignment.ts(3,9): error TS2693: 'number' only refers to a type, but is being used as a value here.
primitiveTypeAssignment.ts(5,9): error TS2693: 'boolean' only refers to a type, but is being used as a value here.


==== primitiveTypeAssignment.ts (3 errors) ====
    var x = any;
            ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
    
    var y = number;
            ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
    
    var z = boolean;
            ~~~~~~~
!!! error TS2693: 'boolean' only refers to a type, but is being used as a value here.
    